# ProPad

./: .gitignore  Makefile  README.md  exceptions.json  export_dialog.py  formatting_toolbar.py  generate_sources.sh  io.github.sanjai.ProPad.desktop  io.github.sanjai.ProPad.metainfo.xml  io.github.sanjai.ProPad.yaml  justfile  main.py  messages.mo  pyproject.toml  python-deps-sources.yaml  requirements.txt  shortcuts_window.py  sidebar.py  update_manifest.py  webview.py  window.py
assets/: styles.css
data/: gschema.xml    style.css
lib/: export_dialog.blp  file_manager.blp  formatting_toolbar.blp  search_replace.blp  shortcuts_window.blp  sidebar.blp  webview.blp  window.blp
po/: ar.po  bn.po  de.po  en.po  en_GB.po  es.po  fr.po  gu.po  hi.po  it.po  ja.po  kn.po  ko.po  ml.po  mr.po  pa.po  propad.pot  pt.po  ru.po  ta.po  te.po  th.po  zh_CN.po
propad/: file_manager.py  i18n.py  sidebar.py
python-modules/: comrak-0.0.9-cp39-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  html2pdf4doc-0.0.22-py3-none-any.whl  tinycss2-1.5.0-py3-none-any.whl
repo/: summary  summary.idx
scripts/: auto-translate.py  download-translation-deps.sh  generate-all-po-mc.py  generate-all-po.py  update_manifest.py
src/: export_dialog.py  file_manager.py  formatting_toolbar.py  i18n.py  scroll_sync.py  search_replace.py  settings.py  shortcuts_window.py  sidebar.py  state_manager.py  test_application.py  webview.py  window.py
tests/: test_config.py
ui/: export_dialog.ui  file_manager.ui  formatting_toolbar.ui  search_replace.ui  sidebar.ui  webview.ui  window.ui
(+44 files in other folders)
